# Servidor-Sisyphus-Cagometre

./: .gitignore  Cargo.toml  Dockerfile  fly.toml
src/: container.rs  main.rs  state.rs
src/controladors/: auth_controller.rs  etiqueta_controller.rs  icontroller.rs  lavabo_controller.rs  mod.rs  proba.rs  resenya_controller.rs  user_controller.rs
src/dades/: mod.rs
src/dades/models/: etiqueta.rs  imatge.rs  lavabo.rs  mod.rs  resenya.rs  rols.rs  usuari.rs
src/dades/repositoris/: lavabo_repository.rs  mod.rs
src/dades/repositoris/compartit/: irepository.rs  mod.rs
src/dades/repositoris/postgres/: mod.rs  postgres_etiqueta_repository.rs  postgres_lavabo_imatge_repository.rs  postgres_lavabo_repository.rs  postgres_resenya_repository.rs  postgres_user_repository.rs
src/dades/repositoris/supabase_storage/: mod.rs  supabase_lavabo_images_repository.rs
src/dades/repositoris/traits/: etiqueta_repository.rs  image_repository.rs  lavabo_imatge_repository.rs  mod.rs  (+2 more)
src/errors/: auth_errors.rs  crud_errors.rs  lavabo_errors.rs  mod.rs  storage_errors.rs  usuari_errors.rs
src/routes/: auth_routes.rs  etiqueta_routes.rs  lavabo_routes.rs  mod.rs  resenya_routes.rs  user_routes.rs
src/routes/extractors/: auth_extractors.rs  etiqueta_extractors.rs  lavabo_extractors.rs  mod.rs  resenya_extractors.rs  usuari_extractors.rs
src/serveis/: auth_service.rs  etiqueta_service.rs  iservice.rs  lavabo_service.rs  mod.rs  resenya_service.rs  user_service.rs
src/serveis/dtos/: auth_dto.rs  etiqueta_dto.rs  lavabo_dto.rs  mod.rs  resenya_dto.rs  usuari_dto.rs
